# vector_math

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  launch_benchmark.bat  launch_benchmark.sh  launch_benchmark_android.sh  launch_test.bat  launch_test.sh  todo.md
.github/workflows/: cmake-multi-platform.yml
benchmark/: main.cpp
cmake/: vector_mathConfig.cmake.in
dependencies/: benchmark.cmake  glm.cmake  googletest.cmake
inc/vector_math/: common.hpp  mat.hpp  matrix2.hpp  matrix3.hpp  matrix4.hpp  matrix4d.hpp  matrix4f.hpp  quaternion.hpp  quaterniond.hpp  quaternionf.hpp  vec.hpp  vector2.hpp  vector2d.hpp  vector2f.hpp  vector3.hpp  vector3d.hpp  vector3f.hpp  vector4.hpp  vector4d.hpp  vector4f.hpp  vector_math.hpp
src/: matrix4d.cpp  matrix4f.cpp  vector_math.cpp  vector_math_config.h.in
test/: main.cpp
